[package]
name = "bf-jit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.153"

[dependencies.iced-x86]
version = "1.21.0"
features = ["code_asm"]

[profile.release]
lto = "thin"
opt-level = 3
