[package]
name = "bf-jit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.153"

[dependencies.iced-x86]
version = "1.21.0"
features = ["code_asm"]

[dependencies.windows-sys]
version = "0.52.0"
features = ["Win32_Foundation", "Win32_System_Memory"]

[profile.release]
# lto = "thin"
opt-level = 3
